# workspace

./: Makefile  README.md  SConstruct  memory_models.md  meson.build  tree_description.txt
c/: CMakeLists.txt  hello.c  hello_pthread.c  static_alloc.c  test_scope.c
c++/: CMakeLists.txt  hello.cpp  hwup.cc  linked_list.cc  sizeof.cc  tag_dispatching.cc
c++/src/: auto.cc  brackets.cc  is_same.cc  linked_list.cc  polymorphism.cc  reference.cc  sizeof.cc  sorting.cc  templates.cc  vector.cc
c/inc/: state.h
c/src/: bst.c  hello_cmocka.c  state.c  static_alloc.c  test_scope.c  test_state.c
google/: SConscript  genpasswd.c  genpasswd.out
haskell/: add.hs  listLength.hs  myBookInfo.hs  myDrop.hs  myNot.hs  nullable.hs  shapeUnion.hs  tree.hs
hello-world/: SConscript  a.out  main.c  riscv64-virt.ld
list/: SConscript  list.c
longest-common-subsequence/: SConscript  lcs.c  lcs.out
monitor/: SConscript  main.cc  main.out
perm/: SConscript  perm.c
python/: list.py  sorting.py
regex/: SConscript  regex.cc  test1.txt  test4.txt  test5.txt
rfc7539/: SConscript  main.cc
rijandel/: SConscript  main.cc
setjmp/: SConscript  setjmp.c
sorting/: SConscript  sort.c  sort.out
subprojects/google/: meson.build
subprojects/long_multiplication/: main.cc  meson.build
subprojects/longest-common-subsequence/: meson.build
subprojects/perm/: meson.build
subprojects/regex/: meson.build  regex.cc  test2.txt  test3.txt
subprojects/template/: meson.build  sfinae.cpp
subprojects/triangle/: meson.build  test.txt
systemc/: CMakeLists.txt  hello_sc.cpp
systemc-hello-world/: SConscript  main.cpp
systemc/cmake/: FindSystemC.cmake
triangle/: SConscript  triangle.c
