project('workspace', 'cpp', 'c',
  version : '0.1',
  license : 'MIT')
dependency('perm', fallback : ['perm', 'perm_dep'])
dependency('regex', fallback : ['regex', 'regex_dep'])
dependency('google', fallback : ['google', 'google_dep'])
dependency('lcs', fallback : ['longest-common-subsequence', 'lcs_dep'])
dependency('triangle', fallback : ['triangle', 'triangle_dep'])
dependency('long_multiplication', fallback : ['long_multiplication', 'long_multiplication_dep'])
dependency('sfinae', fallback : ['template', 'sfinae_dep'])
